refactor: move Chrome into gui package